# GestionHotel

./: CMakeLists.txt  client.c  directeur.c  display.c  io.c  main.c
datas/: chambres.txt  extras.txt  formules.txt  reservations.txt
headers/: client.h  directeur.h  display.h  io.h  structures.h
